<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r2"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/matricula"
                android:id="@+id/mat1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/d1"
                android:id="@+id/mat2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/nombre"
                android:id="@+id/nom1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/nom2"
                android:text="@string/d2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/apellidop"
                android:id="@+id/app1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/d3"
                android:id="@+id/app2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/apellidom"
                android:id="@+id/apm1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/d4"
                android:id="@+id/apm2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:id="@+id/em1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/d5"
                android:id="@+id/em2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r7"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/carrera"
                android:id="@+id/car1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/d6"
                android:id="@+id/car2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r11"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/semestre"
                android:id="@+id/sem1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/d7"
                android:id="@+id/sem2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r9"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/grado"
                android:id="@+id/gr1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/d8"
                android:id="@+id/gr2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:text="@string/maquina_a_utilizar"
                android:id="@+id/maq1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="3dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/d9"
                android:id="@+id/maq2"
                android:textColor="#ffff3f1b"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>