<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".principal"
    android:orientation="vertical"
    android:background="#ff05acff"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloAplicacion"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="#ff00ff5b" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:textStyle="italic"
        android:hint="@string/Usuario"
        android:id="@+id/Usuario"
        android:autoText="false"
        android:password="false"
        android:phoneNumber="false"
        android:textColor="#ff000000"
        android:background="@android:color/background_light">
        <requestFocus/>
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/Password"
        android:ems="10"
        android:textStyle="italic"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textColor="#ff000000"
        android:background="@android:color/background_light">
    </EditText>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnIngresar"
        android:text="@string/Ingresar"
        android:onClick="login"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff1f1f1f"
        android:background="#ff8fff12" />


</LinearLayout>

